--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/JetpackLevel.JetpackLevel
 EditorStartupMap=/Game/Maps/JetpackLevel.JetpackLevel
+GlobalDefaultGameMode=/Game/Blueprints/Game/BP_Jetpack_GameMode.BP_Jetpack_GameMode_C
 
 [/Script/WindowsTargetPlatform.WindowsTargetSettings]
 DefaultGraphicsRHI=DefaultGraphicsRHI_DX12
