Lazy Loading Texture Tunning Memory optimization

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -2,3 +2,7 @@
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=9A86565A48DEC1DB45FF35BA95994F98
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+WriteBackMetadataToAssetRegistry=OriginalFile
+
